--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projecto-calculadora</title>
     <link rel="stylesheet" href="assets/css/global.css">
 </head>
 
@@ -64,7 +64,7 @@
 
             <div id="item-1">1</div>
            
-            <div >3</div>
+            <div id="item-3" ></div>
             <div >4</div>
             <div >5</div>
             <div >1</div>
@@ -79,11 +79,8 @@
             <div>6</div>
             <div>1</div>
             <div>2</div>
-            <div >3</div>
-            <div >=</div>
-            
-   
-
+            <div>3</div>
+            <div >=</div>         
     </div>
 
     <script src="./assets/js/index.js"></script>
