a multiplicacao e a divisao ja entao funcionais

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             <div class="botao" onclick="numeroPressionado(8)">8</div>
             <div class="botao" onclick="numeroPressionado(9)">9</div>
             <div class="item-borda botao" onclick="operacaoPressionada('-')">-</div>
-            <div class="botao">.</div>
+            <div class="botao" onclick="numeroPressionado(0)">0</div>
             <div class="botao" onclick="operacaoPressionada('×')">×</div>
-            <div class="botao">÷</div>
+            <div class="botao" onclick="operacaoPressionada('÷')">÷</div>
             <div class="item-borda botao" onclick="resultado('=')">=</div>
                     
     </div>
